Transform module information from NetConf node to Generic format for NCMP
Issue-ID: CPS-531
